# blog

Proyecto_4/: db.sqlite3  pyproject.toml
Proyecto_4/blog/migrations/: 0001_initial.py
Proyecto_4/blog_project/: settings.py
Proyecto_4/templates/: post_detail.html
